Change sub-title headings from h3 to h4

--- a/index-edited.html
+++ b/index-edited.html
@@ -411,9 +411,9 @@
             <div class="row justify-content-center py-5">
               <div class="col-xl-7">
                 <div class="section-title text-center">
-                  <h3 class="sub-title" data-aos="fade-up" data-aos-duration="1000">
+                  <h4 class="sub-title" data-aos="fade-up" data-aos-duration="1000">
                     Why Choose Big Chill
-                  </h3>
+                  </h4>
                   <h2>Something Sweet for Every Craving</h2>
                 </div>
               </div>
@@ -518,7 +518,7 @@
                 <div class="bistly-content-box text-center text-xl-start">
                   <!-- Section Title -->
                   <div class="section-title mb-3">
-                    <span class="sub-title" data-aos="fade-down" data-aos-duration="1000">Get your Events Covered</span>
+                    <h4 class="sub-title" data-aos="fade-down" data-aos-duration="1000">Get your Events Covered</h4>
                     <h2 class="">Moments Made Sweeter</h2>
                   </div>
                   <p class="mb-4 mt-5" data-aos="fade-up" data-aos-duration="1200">
@@ -564,7 +564,7 @@
           </div>
           <div class="container">
             <div class="row justify-content-center py-5">
-              <h2 class="sub-title mb-5">Real flavours, real stories</h2>
+              <h4 class="sub-title mb-5">Real flavours, real stories</h4>
 
               <div class="col-xl-12 col-lg-10">
 
@@ -736,7 +736,7 @@
           <div class="container">
             <!-- SECTION HEADER -->
             <div class="blog-header">
-              <h2 class="sub-title">From Our Blog</h2>
+              <h4 class="sub-title">From Our Blog</h4>
               <h3>Stories, Flavours & Sweet Moments</h3>
               <p>
                 Discover behind-the-scenes stories, flavour inspirations, and
