index-edited file rename to index

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </div>
           <div class="item">
             <div class="category-name">
-              <h1>Scoop</h1>
+              <h2>Scoop</h2>
               <h3>Classic creamy scoops crafted to perfection</h3>
             </div>
             <img src="assets/images/home-page/scoop-iceCream.png" />
@@ -288,7 +288,7 @@
 
           <div class="item">
             <div class="category-name">
-              <h1>Thick Shakes</h1>
+              <h2>Thick Shakes</h2>
               <h3>Rich, indulgent shakes with real ingredients</h3>
             </div>
             <img src="assets/images/home-page/thick-shake.png" style="height: 60vh !important;" />
@@ -296,7 +296,7 @@
 
           <div class="item">
             <div class="category-name">
-              <h1>Falooda</h1>
+              <h2>Falooda</h2>
               <h3>A royal fusion of flavours and textures</h3>
             </div>
             <img src="assets/images/home-page/falooda.png" />
@@ -305,7 +305,7 @@
 
           <div class="item">
             <div class="category-name">
-              <h1>Mojito</h1>
+              <h2>Mojito</h2>
               <h3>Fresh, chilled and delightfully refreshing</ph3>
             </div>
             <img src="assets/images/home-page/mojito.png" />
@@ -314,7 +314,7 @@
 
           <div class="item">
             <div class="category-name">
-              <h1>Shahi Falooda</h1>
+              <h2>Shahi Falooda</h2>
               <h3>A luxurious dessert experience</h3>
             </div>
             <img src="assets/images/home-page/shahi-falooda.png" class="falooda-img" />
@@ -411,9 +411,9 @@
             <div class="row justify-content-center py-5">
               <div class="col-xl-7">
                 <div class="section-title text-center">
-                  <h3 class="sub-title" data-aos="fade-up" data-aos-duration="1000">
+                  <h4 class="sub-title" data-aos="fade-up" data-aos-duration="1000">
                     Why Choose Big Chill
-                  </h3>
+                  </h4>
                   <h2>Something Sweet for Every Craving</h2>
                 </div>
               </div>
@@ -518,7 +518,7 @@
                 <div class="bistly-content-box text-center text-xl-start">
                   <!-- Section Title -->
                   <div class="section-title mb-3">
-                    <span class="sub-title" data-aos="fade-down" data-aos-duration="1000">Get your Events Covered</span>
+                    <h4 class="sub-title" data-aos="fade-down" data-aos-duration="1000">Get your Events Covered</h4>
                     <h2 class="">Moments Made Sweeter</h2>
                   </div>
                   <p class="mb-4 mt-5" data-aos="fade-up" data-aos-duration="1200">
@@ -564,7 +564,7 @@
           </div>
           <div class="container">
             <div class="row justify-content-center py-5">
-              <h2 class="sub-title mb-5">Real flavours, real stories</h2>
+              <h3 class="sub-title mb-5">Real flavours, Real stories</h3>
 
               <div class="col-xl-12 col-lg-10">
 
@@ -628,7 +628,7 @@
               <div class="row justify-content-center">
                 <div class="col-xl-7">
                   <div class="ds-cta-box text-center">
-                    <div class="section-title" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="section-title d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000">
                       <h2>Get Sweet Deals & Seasonal Updates!</h2>
                     </div>
 
@@ -736,7 +736,7 @@
           <div class="container">
             <!-- SECTION HEADER -->
             <div class="blog-header">
-              <h2 class="sub-title">From Our Blog</h2>
+              <h4 class="sub-title">From Our Blog</h4>
               <h3>Stories, Flavours & Sweet Moments</h3>
               <p>
                 Discover behind-the-scenes stories, flavour inspirations, and
